# py-eekeeper

./: CLAUDE.md  COMPARAISON_EEKEEPER_QT_PYTHON.md  README.md  SPEC.md  pyproject.toml
py_eekeeper/: __init__.py  app.py  backup.py  config.py  main.py  mods.py
py_eekeeper/formats/: constants.py  inf_2da.py  inf_affect.py  inf_bam.py  inf_bif.py  inf_chr.py  inf_creature.py  inf_game.py  inf_journal.py  inf_key.py  inf_tlk.py
py_eekeeper/resources/: descriptions.py  game_lists.py  item_info.py  kits.py  proficiencies.py  resource_manager.py  spell_bitmaps.py  value_list.py
py_eekeeper/ui/: affect_edit_dialog.py  affects_tab.py  appearance_tab.py  batch_operations.py  character_sheet.py  compare_dialog.py  creature_browser.py  game_tab.py  globals_editor.py  installation_dialog.py  inventory_tab.py  item_browser.py  journal_editor.py  locals_editor.py  main_window.py  memorization_tab.py  mods_dialog.py  open_saved_game_dialog.py  party_search_dialog.py  portrait_browser.py  proficiencies_tab.py  save_game_name_dialog.py  saved_game_widget.py  settings_dialog.py  spell_browser.py  spell_tab.py  string_finder_dialog.py  theme.py  undo_commands.py  value_list_dialog.py
tests/: test_app_items.py  test_app_kits.py  test_game_lists.py  test_inf_2da.py  test_inf_creature.py  test_inf_game.py  test_integration.py  test_mods.py  test_proficiencies.py  test_resource_formats.py  test_value_list.py
